@@ -53,6 +53,10 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1401: "explain -script <script file>" executes grunt commands like
+run/dump/copy etc - explain -script should not execute any grunt command and
+only explain the query plans (pradeepkth)
+
 PIG-1303: Inconsistent instantiation of parametrized UDFs (jrussek and dvryaboy)
 
 740 : Incorrect line number is generated when a string with double quotes is
